<resources>
    <string name="ninchat_chat_error_no_video_call_permissions">You need to grant the application permission to use camera and microphone to have video chat!</string>
    <string name="ninchat_chat_error_no_file_permissions">You need to grant the application permission to access storage to send image files!</string>
    <string name="ninchat_chat_error_downloading_preview">Error downloading preview!</string>

    <string name="ninchat_chat_video_call_consent_title">Video call request</string>
    <string name="ninchat_chat_video_call_consent_description">wants to video chat with you</string>
    <string name="ninchat_chat_video_call_consent_accept">Accept</string>
    <string name="ninchat_chat_video_call_consent_reject">Reject</string>

    <string name="ninchat_file_type_title">Select file type</string>
    <string name="ninchat_file_type_image">Image</string>
    <string name="ninchat_file_type_video">Video</string>
    <string name="ninchat_file_type_pdf">PDF</string>
    <string name="ninchat_file_type_cancel">Close</string>

    <string name="ninchat_review_positive">Good</string>
    <string name="ninchat_review_neutral">Okay</string>
    <string name="ninchat_review_sad">Poor</string>

    <string name="ninchat_chat_command_input_text_placeholder_string">null</string>


    <!--test specific values-->
    <string name="ninchat_site_secret">dummy_value</string>
    <string name="ninchat_site_secret_wrong">dummy_value</string>
    <string name="ninchat_server_address">dummy_value</string>
    <string name="ninchat_server_address_wrong">dummy_value</string>
    <string name="ninchat_configuration_key">dummy_value</string>
    <string name="ninchat_configuration_key_wrong">dummy_value</string>
    <string name="ninchat_queue">dummy_value</string>
    <string name="ninchat_queue_closed">dummy_value</string>
    <string name="ninchat_queue_wrong">dummy_value</string>
    <string name="ninchat_realm_id">dummy_value</string>
    <string name="ninchat_realm_id_wrong">dummy_value</string>
    <string name="ninchat_audience_queue">dummy_value</string>
    <string name="ninchat_audience_queue_wrong">dummy_value</string>

    <string name="ninchat_autolink_attributes">all</string>

</resources>
