<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ninchat_chat_activity_file_type_dialog_title_height">

        <TextView
            android:id="@+id/ninchat_file_type_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ninchat_file_type_title"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:foreground="@color/ninchat_colorPrimaryDark" />

    <Button
        android:layout_width="@dimen/ninchat_chat_activity_file_type_dialog_button_width"
        android:layout_height="wrap_content"
        android:text="@string/ninchat_file_type_image"
        android:layout_gravity="center_horizontal"
        android:onClick="openImagePicker"
        android:layout_marginTop="@dimen/ninchat_chat_activity_file_type_dialog_button_outer_margin" />

    <Button
        android:layout_width="@dimen/ninchat_chat_activity_file_type_dialog_button_width"
        android:layout_height="wrap_content"
        android:text="@string/ninchat_file_type_video"
        android:layout_gravity="center_horizontal"
        android:onClick="openVideoPicker"
        android:layout_marginTop="@dimen/ninchat_chat_activity_file_type_dialog_button_outer_margin" />

    <Button
        android:layout_width="@dimen/ninchat_chat_activity_file_type_dialog_button_width"
        android:layout_height="wrap_content"
        android:text="@string/ninchat_file_type_pdf"
        android:layout_gravity="center_horizontal"
        android:onClick="openPDFPicker"
        android:layout_marginTop="@dimen/ninchat_chat_activity_file_type_dialog_button_inner_margin"
        android:visibility="gone"/>

    <Button
        android:layout_width="@dimen/ninchat_chat_activity_file_type_dialog_button_width"
        android:layout_height="wrap_content"
        style="@style/NinchatTheme.Button.Close"
        android:text="@string/ninchat_file_type_cancel"
        android:onClick="closeFilePickerDialog"
        android:layout_marginTop="@dimen/ninchat_chat_activity_file_type_dialog_button_inner_margin"
        android:layout_marginBottom="@dimen/ninchat_chat_activity_file_type_dialog_button_outer_margin"
        android:layout_gravity="center_horizontal" />


</LinearLayout>